--- a/code/page/css/style.css
+++ b/code/page/css/style.css
@@ -23,16 +23,29 @@ header {
     .menu {
       display: flex;
       gap: 30px;
+      .home {
+        text-decoration: underline 2px rgb(250, 128, 128);
+      }
       p {
         /*display: inline;*/
         padding-top: 5px;
         font-weight: 600;
         cursor: pointer;
-        transition: all 400ms ease-in-out;
+        /* transition: all 400ms ease-in-out;
         &:hover {
           color: rgb(251, 109, 109);
           text-decoration: underline;
           transform: translateY(-8px);
+        } */
+         &:hover {
+          color: rgb(251, 109, 109);
+         }
+        a {
+          text-decoration: none;
+          color: #313865;
+          &:hover {
+            color: rgb(251, 109, 109);
+          }
         }
       }
     }
@@ -414,6 +427,13 @@ footer {
     .content {
       line-height: 2;
       color: #bfbcbc;
+      a {
+        text-decoration: none;
+        color: #bfbcbc;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
     .social {
       display: flex;
