--- a/code/page/css/aboutme.css
+++ b/code/page/css/aboutme.css
@@ -89,7 +89,7 @@ main {
       }
       p {
         span {
-            color:rgb(250, 128, 128);
+          color: rgb(250, 128, 128);
         }
       }
     }
@@ -186,125 +186,212 @@ footer {
     }
   }
 }
-@media screen and (max-width: 320px) {
-    header {
-        .header-section1{
-            gap: 30px;
-            justify-content: start;
-            padding: 5px;
-            h1 {
-                font-size: 14px;
-            }
-            .menu {
-                gap: 10px;
-                font-size: 8px;
-            }
-        }
-        .header-section2 {
-            /* justify-content: start; */
-            gap: 30px;
-            padding: 5px;
-            top: 35px;
-            h2 {
-                font-size: 13px;
-            }
-            p {
-                font-size: 8px;
-            }
-        }
+@media screen and (min-width: 320px) {
+  header {
+    .header-section1 {
+      gap: 35px;
+      justify-content: start;
+      padding: 5px;
+      h1 {
+        font-size: 14px;
+      }
+      .menu {
+        gap: 10px;
+        font-size: 8px;
+      }
     }
-    main {
+    .header-section2 {
+      /* justify-content: start; */
+      gap: 30px;
+      padding: 5px;
+      top: 35px;
+      h2 {
+        font-size: 13px;
+      }
+      p {
+        font-size: 8px;
+      }
+    }
+  }
+  main {
+    gap: 20px;
+    padding: 5px;
+    margin-bottom: 0;
+    flex-direction: column;
+    top: 30px;
+    .information-text {
+      .about-me {
         gap: 20px;
-        padding: 5px;
-        margin-bottom: 0;
-        flex-direction: column;
-        top: 30px;
-        .information-text {
-            .about-me {
-                gap: 20px;
-                h2 {
-                    font-size: 14px;
-                }
-                p {
-                    font-size: 8px;
-                }
-            }
-            .hobby-text {
-                gap: 20px;
-                h2 {
-                    margin-top: 15px;
-                    font-size: 14px;
-                }
-                p {
-                    font-size: 8px;
-                }
-            }
+        h2 {
+          font-size: 14px;
         }
-        .information-img {
-            order: -1;
-            img {
-                width: 300px;
-                height: 300px;
-                padding-left: 10px;
-                gap: 30px;
-                flex-wrap: wrap;
-            }
+        p {
+          font-size: 8px;
         }
+      }
+      .hobby-text {
+        gap: 20px;
+        h2 {
+          margin-top: 15px;
+          font-size: 14px;
+        }
+        p {
+          font-size: 8px;
+        }
+      }
     }
-    footer {
-        top: 50px;
-        padding: 10px 5px 50px 5px;
-        flex-direction: row;
+    .information-img {
+      order: -1;
+      img {
+        width: 300px;
+        height: 300px;
+        padding-left: 10px;
+        gap: 30px;
         flex-wrap: wrap;
-        gap: 45px;
-         .visit-site {
-            padding-top: 8px;
-            h3 {
-                font-size: 12px;
-            }
-            a {
-                padding-top: 10px;
-                font-size: 8px;
-            }
-        } 
-        .about-us {
-            padding-top: 10px;
-            h4 {
-                font-size: 12px;
-            }
-            .inform {
-                font-size: 8px;
-            }
-        }
-        .product  {
-            padding-top: 10px;
-            h4 {
-                font-size: 12px;
-            }
-            .name {
-                font-size: 8px;
-            }
-        }
-        .contact {
-            padding-top: 10px;
-            h4 {
-                font-size: 12px;
-            }
-            .content {
-                font-size: 8px;
-            }
-        }
+      }
     }
+  }
+  footer {
+    top: 50px;
+    padding: 10px 5px 50px 5px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 45px;
+    .visit-site {
+      padding-top: 8px;
+      h3 {
+        font-size: 12px;
+      }
+      a {
+        padding-top: 10px;
+        font-size: 8px;
+      }
+    }
+    .about-us {
+      padding-top: 10px;
+      h4 {
+        font-size: 12px;
+      }
+      .inform {
+        font-size: 8px;
+      }
+    }
+    .product {
+      padding-top: 10px;
+      h4 {
+        font-size: 12px;
+      }
+      .name {
+        font-size: 8px;
+      }
+    }
+    .contact {
+      padding-top: 10px;
+      h4 {
+        font-size: 12px;
+      }
+      .content {
+        font-size: 8px;
+      }
+    }
+  }
 }
-@media screen and (max-width: 375px) {
-
+@media screen and (min-width: 375px) {
+  header {
+    .header-section1 {
+      gap: 40px;
+      padding: 8px;
+      h1 {
+        font-size: 16px;
+      }
+      .menu {
+        gap: 12px;
+        font-size: 10px;
+      }
+    }
+    .header-section2 {
+      top: 40px;
+      padding: 8px;
+      h2 {
+        font-size: 15px;
+      }
+      p {
+        font-size: 10px;
+      }
+    }
+  }
+  main {
+    top: 20px;
+    padding: 8px;
+    .information-text {
+      .about-me {
+        h2 {
+          font-size: 16px;
+        }
+        p {
+          font-size: 10px;
+        }
+      }
+      .hobby-text {
+        h2 {
+          font-size: 16px;
+        }
+        p {
+          font-size: 10px;
+        }
+      }
+    }
+    .information-img {
+      img {
+        width: 350px;
+        height: 350px;
+      }
+    }
+  }
+  footer {
+    padding: 8px;
+    padding-bottom: 20px;
+    .visit-site {
+      padding-top: 10px;
+      h3 {
+        font-size: 15px;
+      }
+      a {
+        font-size: 10px;
+        padding-top: 14px;
+      }
+    }
+    .about-us {
+      width: 100%;
+      h4 {
+        font-size: 14px;
+      }
+      .inform {
+        font-size: 10px;
+      }
+    }
+    .product {
+      h4 {
+        font-size: 14px;
+      }
+      .name {
+        font-size: 10px;
+      }
+    }
+    .contact {
+      h4 {
+        font-size: 14px;
+      }
+      .content {
+        font-size: 10px;
+      }
+    }
+  }
 }
-@media screen and (max-width: 425px) {
 
+@media screen and (min-width: 425px) {
 }
-@media screen and (max-width: 768px) {
-
+@media screen and (min-width: 768px) {
 }
-@media screen and (max-width: 1024px) {
-
+@media screen and (min-width: 1024px) {
 }
